all-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "petfriend-ingress"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /walks
            pathType: Prefix
            backend:  
              service:
                name: "walk-backend"
                port:
                  number: 8080
          - path: /auths
            pathType: Prefix
            backend:  
              service:
                name: "userinfo-backend"
                port:
                  number: 8080 
          - path: /userInfos
            pathType: Prefix
            backend:  
              service:
                name: "userinfo-backend"
                port:
                  number: 8080 
          - path: /payments
            pathType: Prefix
            backend:  
              service:
                name: "payment-backend"
                port:
                  number: 8080
          - path: /reservations
            pathType: Prefix
            backend:  
              service:
                name: "reservation-backend"
                port:
                  number: 8080
          - path: /dailys
            pathType: Prefix
            backend:  
              service:
                name: "daily-backend"
                port:
                  number: 8080
          - path: /walks
            pathType: Prefix
            backend:  
              service:
                name: "walk-backend" 
                port:
                  number: 8080
          - path: /dogwalkerschedules
            pathType: Prefix
            backend:  
              service:
                name: "dogwalkerschedule-backend" 
                port:
                  number: 8080
          - path: /alarms
              pathType: Prefix
              backend:
                service:
                  name: "alarm-backend"
                  port:
                    number: 8080
          - path: /mypages
              pathType: Prefix
              backend:
                service:
                  name: "mypage-backend"
                    port:
                      number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "frontend"
                port:
                  number: 80
